--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -37,5 +37,5 @@
   --header-default-logo-width-custom:190px;
   --navigation-default-color-custom:var(--color);
   --teaser-title-figcaption-background-color: var(--m-white);
-
+--search-input-width: 10em;
 }
